# totp-strict

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/totp_strict/: __init__.py  _exceptions.py  _guards.py  _hotp.py  _secure.py  _totp.py  _vault.py
tests/: test_hotp.py  test_totp.py
