[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totp-strict"
version = "0.1.0"
description = "RFC 6238 TOTP and RFC 4226 HOTP — HMAC-SHA-1/256/512, zero dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["totp", "hotp", "otp", "mfa", "2fa", "authentication", "rfc6238", "rfc4226", "hmac", "sha512", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/Suhas-123-cell/totp-strict"
Repository = "https://github.com/Suhas-123-cell/totp-strict"
Issues = "https://github.com/Suhas-123-cell/totp-strict/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/totp_strict"]
